The fake sound of progress, including a fix for the scrollbars issue in single column having had a similar issue with the two-up

--- a/html/sfe/css/output/patterns/0-header.css
+++ b/html/sfe/css/output/patterns/0-header.css
@@ -100,7 +100,7 @@
     padding: 0.5em 0 0 0;
     text-align: center;
     background-position: center top;
-    height: 9.8125em; }
+    height: 10.375em; }
   .header__part--search .form-item-search-block-form {
     float: left;
     text-align: left;
